--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: RQt
-Type: Package
-Title: What the package does (short line)
-Version: 1.0
-Date: 2015-05-22
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line)
-License: What license is it under?
-Depends: rJava (>= 0.9-6), R (>= 3.2.0)
+Title: R Interface to XQt Language for Unified Data Processing
+Version: 0.1
+Authors@R: c(
+    person("Javad", "Chamanara", email = "chamanara@gmail.com", role = c("aut", "cre")),
+    person("Clayton", "Yochum", email = "claytonjy@gmail.com", role = c("aut")),
+    person("Ellis", "Valentiner", email = "ellis.valentiner@gmail.com", role = c("aut")))
+Description: This package provides a way to use the XQt language from within R.
+License: LGPL-3
+Depends:
+    R (>= 3.2.0)
+Imports:
+    rJava (>= 0.9-6)
