Added function rqt.listVariables to list all the variables a process has used and loaded by any statement/ query
Added function rqt.getVariableSchema which returns the schema of a
variable name passed to it. the scema contains attribute names, data
type, constraints, and annotations (semantic definition of the
attributes)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(rqt.getEngine)
 export(rqt.getProcess)
 export(rqt.getRunReport)
 export(rqt.getVariable)
+export(rqt.getVariableSchema)
+export(rqt.listVariables)
 export(rqt.loadProcess)
 export(rqt.runProcess)
 export(rqt.versionInfo)
